[gd_scene load_steps=72 format=2]

[ext_resource path="res://UI/littlearrow.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Weapon_Shotgun.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Character.gd" type="Script" id=3]
[ext_resource path="res://UI/littlearrowhover.png" type="Texture" id=4]
[ext_resource path="res://UI/littlearrowpressed.png" type="Texture" id=5]
[ext_resource path="res://UI/littlearrowleft.png" type="Texture" id=6]
[ext_resource path="res://Sounds/shotgun.wav" type="AudioStream" id=7]
[ext_resource path="res://UI/littlearrowhoverleft.png" type="Texture" id=8]
[ext_resource path="res://Sounds/uzi.wav" type="AudioStream" id=10]
[ext_resource path="res://Textures/Base/upperbodyatlas.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.09367, 15.0005 )

[sub_resource type="Animation" id=2]
resource_name = "idleback"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseLowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idlefront"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseLowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idleright"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseLowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseLowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=6]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseLowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=7]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseLowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=8]
resource_name = "idleback0"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=9]
resource_name = "idleback1"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}

[sub_resource type="Animation" id=10]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 14, 15 ]
}

[sub_resource type="Animation" id=53]
resource_name = "idleback3"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 20, 21 ]
}

[sub_resource type="Animation" id=11]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=12]
resource_name = "idlefront1"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="Animation" id=13]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 16, 17 ]
}

[sub_resource type="Animation" id=54]
resource_name = "idlefront3"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 22, 23 ]
}

[sub_resource type="Animation" id=14]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=15]
resource_name = "idleright1"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=16]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}

[sub_resource type="Animation" id=55]
resource_name = "idleright3"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 18, 19 ]
}

[sub_resource type="Animation" id=17]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=18]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=19]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=20]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=21]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=22]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BaseUpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}

[sub_resource type="Animation" id=23]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=24]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=25]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=26]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=27]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10 ]
}

[sub_resource type="Animation" id=28]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LowerBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=29]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=56]
resource_name = "idleback1"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}

[sub_resource type="Animation" id=30]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 14, 15 ]
}

[sub_resource type="Animation" id=57]
resource_name = "idleback3"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 20, 21 ]
}

[sub_resource type="Animation" id=31]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=58]
resource_name = "idlefront1"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="Animation" id=32]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 16, 17 ]
}

[sub_resource type="Animation" id=59]
resource_name = "idlefront3"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 22, 23 ]
}

[sub_resource type="Animation" id=33]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=60]
resource_name = "idleright1"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=34]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}

[sub_resource type="Animation" id=61]
resource_name = "idleright3"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 18, 19 ]
}

[sub_resource type="Animation" id=35]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=36]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=37]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=38]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=39]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=40]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperBodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}

[sub_resource type="Animation" id=41]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=42]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=43]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=44]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=45]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=46]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HeadSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=47]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=48]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=49]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=50]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=51]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=52]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[node name="Character" type="Node2D"]
script = ExtResource( 3 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2( 0, 0.9 )
shape = SubResource( 1 )

[node name="BaseLowerBodySprite" type="Sprite" parent="."]
vframes = 4
hframes = 4

[node name="BaseLowerBodyAnim" type="AnimationPlayer" parent="."]
playback_speed = 4.0
anims/idleback = SubResource( 2 )
anims/idlefront = SubResource( 3 )
anims/idleright = SubResource( 4 )
anims/walkdown = SubResource( 5 )
anims/walkright = SubResource( 6 )
anims/walkup = SubResource( 7 )

[node name="BaseUpperBodySprite" type="Sprite" parent="."]
texture = ExtResource( 11 )
vframes = 4
hframes = 6
frame = 21

[node name="BaseUpperBodyAnim" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/idleback0 = SubResource( 8 )
anims/idleback1 = SubResource( 9 )
anims/idleback2 = SubResource( 10 )
anims/idleback3 = SubResource( 53 )
anims/idlefront0 = SubResource( 11 )
anims/idlefront1 = SubResource( 12 )
anims/idlefront2 = SubResource( 13 )
anims/idlefront3 = SubResource( 54 )
anims/idleright0 = SubResource( 14 )
anims/idleright1 = SubResource( 15 )
anims/idleright2 = SubResource( 16 )
anims/idleright3 = SubResource( 55 )
anims/walkdown0 = SubResource( 17 )
anims/walkdown2 = SubResource( 18 )
anims/walkright0 = SubResource( 19 )
anims/walkright2 = SubResource( 20 )
anims/walkup0 = SubResource( 21 )
anims/walkup2 = SubResource( 22 )

[node name="LowerBodySprite" type="Sprite" parent="."]
vframes = 4
hframes = 4
frame = 3

[node name="LowerBodyAnim" type="AnimationPlayer" parent="."]
playback_speed = 4.0
anims/idleback = SubResource( 23 )
anims/idlefront = SubResource( 24 )
anims/idleright = SubResource( 25 )
anims/walkdown = SubResource( 26 )
anims/walkright = SubResource( 27 )
anims/walkup = SubResource( 28 )

[node name="UpperBodySprite" type="Sprite" parent="."]
texture = ExtResource( 11 )
vframes = 4
hframes = 6
frame = 20

[node name="UpperBodyAnim" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/idleback0 = SubResource( 29 )
anims/idleback1 = SubResource( 56 )
anims/idleback2 = SubResource( 30 )
anims/idleback3 = SubResource( 57 )
anims/idlefront0 = SubResource( 31 )
anims/idlefront1 = SubResource( 58 )
anims/idlefront2 = SubResource( 32 )
anims/idlefront3 = SubResource( 59 )
anims/idleright0 = SubResource( 33 )
anims/idleright1 = SubResource( 60 )
anims/idleright2 = SubResource( 34 )
anims/idleright3 = SubResource( 61 )
anims/walkdown0 = SubResource( 35 )
anims/walkdown2 = SubResource( 36 )
anims/walkright0 = SubResource( 37 )
anims/walkright2 = SubResource( 38 )
anims/walkup0 = SubResource( 39 )
anims/walkup2 = SubResource( 40 )

[node name="HeadSprite" type="Sprite" parent="."]
vframes = 2
hframes = 2
frame = 3

[node name="HeadAnim" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/idleback = SubResource( 41 )
anims/idlefront = SubResource( 42 )
anims/idleright = SubResource( 43 )
anims/walkdown = SubResource( 44 )
anims/walkright = SubResource( 45 )
anims/walkup = SubResource( 46 )

[node name="GunSprite" type="Sprite" parent="."]
hframes = 6
frame = 4

[node name="Gun_Fire_Points" type="Node2D" parent="GunSprite"]

[node name="Shotgun_Point" type="Position2D" parent="GunSprite/Gun_Fire_Points"]
script = ExtResource( 2 )

[node name="Shotgun_Sound" type="AudioStreamPlayer2D" parent="GunSprite/Gun_Fire_Points/Shotgun_Point"]
position = Vector2( 1.7646, 0.00142002 )
stream = ExtResource( 7 )
volume_db = -20.0

[node name="Uzi_Point" type="Position2D" parent="GunSprite/Gun_Fire_Points"]
visible = false

[node name="Uzi_Sound" type="AudioStreamPlayer2D" parent="GunSprite/Gun_Fire_Points/Uzi_Point"]
position = Vector2( -2.7354, -4.49858 )
stream = ExtResource( 10 )
volume_db = -20.0

[node name="GunAnim" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/idleback = SubResource( 47 )
anims/idlefront = SubResource( 48 )
anims/idleright = SubResource( 49 )
anims/walkdown = SubResource( 50 )
anims/walkright = SubResource( 51 )
anims/walkup = SubResource( 52 )

[node name="ColorPicker" type="ColorPicker" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 20, -20 )
color = Color( 0.470588, 0.286275, 0.286275, 1 )
edit_alpha = false
presets_enabled = false
presets_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRight" type="TextureButton" parent="."]
margin_left = 8.0
margin_top = -4.0
margin_right = 16.0
margin_bottom = 4.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLeft" type="TextureButton" parent="."]
margin_left = -16.0
margin_top = -4.0
margin_right = -8.0
margin_bottom = 4.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonRight" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="ButtonLeft" to="." method="_on_button_left_pressed"]
